# CMake

./: README.md
CMakeModules/CMakeModules/: CMakeLists.txt  CMakeSettings.json
CMakeModules/CMakeModules/Source/: main.cpp
CMakeModules/CMakeModules/__cmake/: FindLibVPX.cmake  FindOpenAL-Soft.cmake  FindOpus.cmake  FindSDL2.cmake  FindSteamworks.cmake  FindVorbis.cmake
CMakeModules/CMakeModules/__cmake/Libraries/WebM_Library/: CMakeLists.txt
CMakeModules/CMakeModules/__cmake/Libraries/WebM_Library/__cmake/: CMakeLists.txt.in
GoogleTest/GoogleTest/: CMakeLists.txt  CMakeSettings.json
GoogleTest/GoogleTest/Tests/: CMakeLists.txt  CMakeLists.txt.in
GoogleTest/GoogleTest/Tests/Example/: CMakeLists.txt
GoogleTest/GoogleTest/Tests/Example/Sources/: Example.cpp
GoogleTest/GoogleTest/cmake/: GoogleTest.cmake
OpenAL-Soft/: README.md
OpenAL-Soft/OpenAL-Soft/: CMakeLists.txt  CMakeSettings.json
OpenAL-Soft/OpenAL-Soft/OpenAL-Soft-Test/: CMakeLists.txt
OpenAL-Soft/OpenAL-Soft/OpenAL-Soft-Test/Sources/: main.cpp
OpenAL-Soft/OpenAL-Soft/OpenAL-Soft_Library/: CMakeLists.txt
OpenAL-Soft/OpenAL-Soft/OpenAL-Soft_Library/__cmake/: CMakeLists.txt.in
Opus/: README.md
Opus/Opus/: CMakeLists.txt
Opus/Opus/Opus-Test/: CMakeLists.txt
Opus/Opus/Opus-Test/Sources/: main.cpp
Opus/Opus/Opus_Library/: CMakeLists.txt
Opus/Opus/Opus_Library/__cmake/: LibraryConfiguration.cmake
SDL2/: README.md
SDL2/SDL2/: CMakeLists.txt  CMakeSettings.json
SDL2/SDL2/SDL-Test/Sources/: main.cpp
SDL2/SDL2/SDL2-Test/: CMakeLists.txt
SDL2/SDL2/SDL2-Test/Sources/: main.cpp
SDL2/SDL2/SDL2_Library/: CMakeLists.txt
SDL2/SDL2/SDL2_Library/__cmake/: LibraryConfiguration.cmake
WebM/: README.md
WebM/WebM/: CMakeLists.txt
WebM/WebM/WebM-Test/: CMakeLists.txt
WebM/WebM/WebM-Test/Sources/: main.cpp
WebM/WebM/WebM_Library/: CMakeLists.txt
WebM/WebM/WebM_Library/__cmake/: LibraryConfiguration.cmake
libvpx/: README.md
libvpx/libvpx/: CMakeLists.txt
libvpx/libvpx/libvpx-Test/: CMakeLists.txt
libvpx/libvpx/libvpx-Test/Sources/: main.cpp
libvpx/libvpx/libvpx_Library/: CMakeLists.txt
